php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #64441 FILTER_VALIDATE_URL rejects fully qualified domain names
Submitted: 2013-03-16 22:25 UTC Modified: 2013-05-15 12:57 UTC
From: phpwnd at gmail dot com Assigned: pajoye (profile)
Status: Closed Package: Filter related
PHP Version: 5.5.0alpha5 OS:
Private report: No CVE-ID: None
 [2013-03-16 22:25 UTC] phpwnd at gmail dot com
Description:
------------
FILTER_VALIDATE_URL rejects fully qualified domain names even though parse_url() parses them just fine.

Test script:
---------------
var_dump(filter_var('http://example.com.', FILTER_VALIDATE_URL));

Expected result:
----------------
string(18) "http://example.com."

Actual result:
--------------
bool(false)

Patches

Pull Requests

Pull requests:

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2013-05-15 12:57 UTC] dsp@php.net
-Assigned To: +Assigned To: pajoye
 [2013-09-16 21:36 UTC] dsp@php.net
Automatic comment on behalf of syragg@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=18b54a2366dd589959240f8770bbb54be819f6e7
Log: Fix bug #64441 (FILTER_VALIDATE_URL rejects fully qualified domain names)
 [2013-09-16 21:36 UTC] dsp@php.net
-Status: Assigned +Status: Closed
 [2014-10-07 23:17 UTC] stas@php.net
Automatic comment on behalf of syragg@gmail.com
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=18b54a2366dd589959240f8770bbb54be819f6e7
Log: Fix bug #64441 (FILTER_VALIDATE_URL rejects fully qualified domain names)
 [2014-10-07 23:28 UTC] stas@php.net
Automatic comment on behalf of syragg@gmail.com
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=18b54a2366dd589959240f8770bbb54be819f6e7
Log: Fix bug #64441 (FILTER_VALIDATE_URL rejects fully qualified domain names)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC