Fix bug #64441 (FILTER_VALIDATE_URL rejects fully qualified domain names)

(cherry picked from commit c149d4ee4be81ecf005eafd43ede06e70aa4c985)