ext/filter/logical_filters.c
@@ -484,10 +484,6 @@ void php_filter_validate_url(PHP_INPUT_FILTER_PARAM_DECL) /* {{{ */
 			}
 			s++;
 		}
-
-		if (*(e - 1) == '.') {
-			goto bad_url;
-		}
 	}
 
 	if (
